aula dia 08 maio

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     line-height: 1.6; 
    } 
    header { 
-    background-color: #7d1b58; 
+    background-color: #d1eff1; 
    } 
    .logo{ 
     width: 70px; 
